# makeaudit

./: .gitignore  README.md  makeaudit.py  pyproject.toml
examples/: Makefile.bad  Makefile.good  bad.mk  good.mk
