[project]
name = "makeaudit"
version = "1.0.0"
description = "Makefile linter & security checker. 17 rules, A-F grading, CI mode. Zero deps."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Kris Kimmerle"}]
keywords = ["makefile", "linter", "security", "make", "lint", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
makeaudit = "makeaudit:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
